--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,28 +4,28 @@ services:
   service:
     build: .
     shm_size: 2gb
+    container_name: vendor_service
     command: >
-      sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8080" 
+      sh -c "python manage.py runserver 0.0.0.0:8000" 
     volumes:
-      - ./app:/app
+      - ./app/:/usr/src/app/
     ports:
-      - 8080:8080
+      - "8000:8000"
+    env_file:
+      - ./.env.devs
     depends_on:
       - db
-
+  
   db:
-    image: postgres:12
+    build:
+      context: ./scripts_container/
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - DB_HOST= db
-      - DB_NAME=postgres
-      - DB_USER=bruno
-      - DB_PASS=bruno123
+      - POSTGRES_USER=hello_django
+      - POSTGRES_PASSWORD=hello_django
+      - POSTGRES_DB=hello_django_dev
     volumes:
       - postgres_data:/var/lib/postgres/data/
-    ports:
-      - "5433:5432"
+   
   
 volumes:
   postgres_data:   
